added some alt tags

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -148,7 +148,7 @@
             <!-- ------------------------------ -->
             
             <div class="col-lg-6 col-md-12 mb-5">
-                <img src="../assets/menuseafood.jpg" class="img-fluid" alt="">
+                <img src="../assets/menuseafood.jpg" class="img-fluid" alt="bread with a beef in it">
 
 
                 <div class="row M-size py-3 M-food-names" style="background-color: #ffffff;  padding-bottom: 60%;">
@@ -207,7 +207,7 @@
 
             <!-- ------------------------------ -->
             <div class="col-lg-6 col-md-12 py-5">
-                <img src="../assets/menumeat.jpg" class="img-fluid" alt="">
+                <img src="../assets/menumeat.jpg" class="img-fluid" alt="grilled ribs">
 
 
                 <div class="row M-size py-3 M-food-names " style="background-color: #ffffff;">
@@ -274,7 +274,7 @@
 
             <!-- ------------------------------ -->
             <div class="col-lg-6 col-md-12 py-5">
-                <img src="../assets/menudesserts.jpg" class="img-fluid" alt="">
+                <img src="../assets/menudesserts.jpg" class="img-fluid" alt="Brownies with ice cream on top">
 
 
                 <div class="row M-size py-3 M-food-names" style="background-color: #ffffff;">
@@ -416,7 +416,7 @@
                         <p>1357 Mutt Street, Rottweller CA. 12345</p>
                     </div>
                     <div class="col-6 d-flex justify-content-end">
-                        <img class="M-footer-img" src="../assets/CompanyLogo.png" alt="">
+                        <img class="M-footer-img" src="../assets/CompanyLogo.png" alt="A Special CompanyLogo">
                     </div>
                 </div>
 
