--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <div class="container pt-5">
     <div class="row M-food-names">
       <div class="col-lg-6 col-md-12 py-5">
-        <img src="./assets/homeSingle.jpg" class="img-fluid" alt="...">
+        <img src="./assets/homeSingle.jpg" class="img-fluid" alt="Bread with side of Fries">
       </div>
       <div class="col-lg-6 col-md-12 py-5">
         <div class="card">
@@ -148,7 +148,7 @@
 
           <div class="row">
             <div class="col-lg-12 col-md-12">
-              <img src="./assets/HomeImage.jpg" class="card-img-top" alt="...">
+              <img src="./assets/HomeImage.jpg" class="card-img-top" alt="Bread and a dog getting a food from the table with bread with shrimp in it.">
             </div>
           </div>
 
@@ -165,7 +165,7 @@
           <p>1357 Mutt Street, Rottweller CA. 12345</p>
         </div>
         <div class="col-6 d-flex justify-content-end">
-          <img src="./assets/CompanyLogo.png" alt="">
+          <img src="./assets/CompanyLogo.png" alt="A Special CompanyLogo">
         </div>
       </div>
 
