--- a/pages/menu.html
+++ b/pages/menu.html
@@ -412,19 +412,19 @@
         <footer>
             <div class="container-fluid py-5 mb-0">
                 <div class="row">
-                    <div class="col-6 d-flex justify-content-start mb-0">
+                    <div class="col-6 d-flex justify-content-start mb-0 AcardText">
                         <p>1357 Mutt Street, Rottweller CA. 12345</p>
                     </div>
-                    <div class="col-6 d-flex justify-content-end">
-                        <img class="M-footer-img" src="../assets/CompanyLogo.png" alt="">
+                    <div class="col-6 d-flex justify-content-end AcardText">
+                        <img class="M-footer-img" src="../assets/CompanyLogo.png" alt="Muzzles Restaurant logo">
                     </div>
                 </div>
 
                 <div class="row ">
-                    <div class="col-6  d-flex justify-content-start">
+                    <div class="col-6  d-flex justify-content-start AcardText">
                         <p>Phone: 123-456-7890</p>
                     </div>
-                    <div class="col-6 d-flex justify-content-end">
+                    <div class="col-6 d-flex justify-content-end AcardText">
                         <p>Copyright @ Muzzles Restaurant</p>
                     </div>
                 </div>
