--- a/pages/photos.html
+++ b/pages/photos.html
@@ -128,7 +128,7 @@
     <footer>
         <div class="container-fluid py-5 mb-0">
             <div class="row">
-                <div class="col-6 d-flex justify-content-start mb-0">
+                <div class="col-6 d-flex justify-content-start mb-0 AcardText">
                     <p>1357 Mutt Street, Rottweller CA. 12345</p>
                 </div>
                 <div class="col-6 d-flex justify-content-end">
@@ -137,10 +137,10 @@
             </div>
 
             <div class="row ">
-                <div class="col-6  d-flex justify-content-start">
+                <div class="col-6  d-flex justify-content-start AcardText">
                     <p>Phone: 123-456-7890</p>
                 </div>
-                <div class="col-6 d-flex justify-content-end">
+                <div class="col-6 d-flex justify-content-end AcardText">
                     <p>Copyright @ Muzzles Restaurant</p>
                 </div>
             </div>
