--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
   <div class="container pt-5">
     <div class="row M-food-names">
-      <div class="col-lg-6 col-md-12 py-5">
+      <div class="col-lg-6 col-md-12 py-5 px-5">
         <img src="./assets/homeSingle.jpg" class="img-fluid" alt="Bread with side of Fries">
       </div>
       <div class="col-lg-6 col-md-12 py-5">
@@ -148,7 +148,7 @@
 
           <div class="row">
             <div class="col-lg-12 col-md-12">
-              <img src="./assets/HomeImage.jpg" class="card-img-top" alt="Bread and a dog getting a food from the table with bread with shrimp in it.">
+              <img src="./assets/HomeImage.jpg" class="card-img-top img-fluid" alt="Bread and a dog getting a food from the table with bread with shrimp in it.">
             </div>
           </div>
 
