--- a/pages/photos.html
+++ b/pages/photos.html
@@ -126,7 +126,7 @@
     </div>
 
     <footer>
-        <div class="container-fluid py-5 mb-0">
+        <div class="container py-5 mb-0">
             <div class="row">
                 <div class="col-6 d-flex justify-content-start mb-0 M-paragraph">
                     <p>1357 Mutt Street, Rottweller CA. 12345</p>
