--- a/pages/menu.html
+++ b/pages/menu.html
@@ -69,6 +69,9 @@
         </div>
       </nav>
 
+
+      
+
     <div style="background-color: #ffffff;" class="container d-flex justify-content-center">
         <div class="row py-3">
             <div class="col">
@@ -412,7 +415,7 @@
         <footer>
             <div class="container-fluid py-5 mb-0">
                 <div class="row">
-                    <div class="col-6 d-flex justify-content-start mb-0 M-paragraph">
+                    <div class="col-6 d-flex justify-content-start mb-0 AcardText">
                         <p>1357 Mutt Street, Rottweller CA. 12345</p>
                     </div>
                     <div class="col-6 d-flex justify-content-end ">
@@ -421,10 +424,10 @@
                 </div>
 
                 <div class="row ">
-                    <div class="col-6  d-flex justify-content-start M-paragraph">
+                    <div class="col-6  d-flex justify-content-start AcardText">
                         <p>Phone: 123-456-7890</p>
                     </div>
-                    <div class="col-6 d-flex justify-content-end M-paragraph">
+                    <div class="col-6 d-flex justify-content-end AcardText">
                         <p>Copyright @ Muzzles Restaurant</p>
                     </div>
                 </div>
