--- a/pages/catering.html
+++ b/pages/catering.html
@@ -84,7 +84,7 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text AcardHeading">Our Catering Service</p>
-                        <p class="sideText">Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin
+                        <p class="AcardText">Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin
                             sed libero enim sed
                             faucibus turpis in. Et ultrices neque ornare aenean euismod. Quisque sagittis purus sit
                             amet. Ultricies tristique nulla aliquet enim tortor at auctor urna. Purus faucibus ornare
