--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <footer>
     <div class="container-fluid py-5">
       <div class="row">
-        <div class="col-6 d-flex justify-content-start AcardText">
+        <div class="col-6 d-flex justify-content-start navbarFont">
           <p>1357 Mutt Street, Rottweller CA. 12345</p>
         </div>
         <div class="col-6 d-flex justify-content-end">
@@ -170,10 +170,10 @@
       </div>
 
       <div class="row">
-        <div class="col-6  d-flex justify-content-start AcardText">
+        <div class="col-6  d-flex justify-content-start navbarFont">
           <p>Phone: 123-456-7890</p>
         </div>
-        <div class="col-6 d-flex justify-content-end AcardText">
+        <div class="col-6 d-flex justify-content-end navbarFont">
           <p>Copyright @ Muzzles Restaurant</p>
         </div>
       </div>
