--- a/pages/about.html
+++ b/pages/about.html
@@ -107,7 +107,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">The Story Behind the Grill</h5>
-                        <p class="card-text AcardText">Malesuada fames ac turpis egestas integer eget aliquet nibh
+                        <p class="card-text navbarFont">Malesuada fames ac turpis egestas integer eget aliquet nibh
                             praesent.
                             Mattis molestie a iaculis at erat pellentesque adipiscing commodo. Quisque non tellus orci
                             ac auctor augue. Tincidunt augue interdum velit euismod in pellentesque massa. Vel pharetra
@@ -151,7 +151,7 @@
                         alt="Doxie wearing a chef's hat and a bowtie collar">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">George</h5>
-                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text navbarFont">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
@@ -165,7 +165,7 @@
                         alt="Jack Russell Terrier selecting a cut of meat">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">Butterscotch</h5>
-                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text navbarFont">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
@@ -178,7 +178,7 @@
                     <img src="../assets/doxie1.jpg" class="card-img-top" alt="Doxie wearing a vest and a bowtie">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">Louie</h5>
-                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text navbarFont">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
@@ -191,7 +191,7 @@
                     <img src="../assets/novascotia.jpg" class="card-img-top" alt="Dog earing a bib">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">Willow</h5>
-                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text navbarFont">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
@@ -205,7 +205,7 @@
                         alt="Doxie wearing a chef's hat and selecting cheese">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">Skittles</h5>
-                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text navbarFont">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
@@ -218,7 +218,7 @@
                     <img src="../assets/staffie.jpg" class="card-img-top" alt="Dog wearing a chef hat">
                     <div class="card-body">
                         <h5 class="card-title AcardHeading">Mario</h5>
-                        <p class="card-text AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text navbarFont">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed
                             sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu
@@ -244,7 +244,7 @@
 <div class="footer">
     <div class="container-fluid py-5">
         <div class="row">
-            <div class="col-6 d-flex justify-content-start AcardText">
+            <div class="col-6 d-flex justify-content-start navbarFont">
                 <p>1357 Mutt Street, Rottweller CA. 12345</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
@@ -253,10 +253,10 @@
         </div>
 
         <div class="row">
-            <div class="col-6  d-flex justify-content-start AcardText">
+            <div class="col-6  d-flex justify-content-start navbarFont">
                 <p>Phone: 123-456-7890</p>
             </div>
-            <div class="col-6 d-flex justify-content-end AcardText">
+            <div class="col-6 d-flex justify-content-end navbarFont">
                 <p>Copyright @ Muzzles Restaurant</p>
             </div>
         </div>
