--- a/pages/catering.html
+++ b/pages/catering.html
@@ -84,7 +84,7 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text AcardHeading">Our Catering Service</p>
-                        <p class="AcardText">Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin
+                        <p class="navbarFont">Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin
                             sed libero enim sed
                             faucibus turpis in. Et ultrices neque ornare aenean euismod. Quisque sagittis purus sit
                             amet. Ultricies tristique nulla aliquet enim tortor at auctor urna. Purus faucibus ornare
@@ -135,7 +135,7 @@
 <div class="footer">
     <div class="container-fluid py-5">
         <div class="row">
-            <div class="col-6 d-flex justify-content-start AcardText">
+            <div class="col-6 d-flex justify-content-start navbarFont">
                 <p>1357 Mutt Street, Rottweller CA. 12345</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
@@ -144,10 +144,10 @@
         </div>
 
         <div class="row">
-            <div class="col-6  d-flex justify-content-start AcardText">
+            <div class="col-6  d-flex justify-content-start navbarFont">
                 <p>Phone: 123-456-7890</p>
             </div>
-            <div class="col-6 d-flex justify-content-end AcardText">
+            <div class="col-6 d-flex justify-content-end navbarFont">
                 <p>Copyright @ Muzzles Restaurant</p>
             </div>
         </div>
